--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
             <li><a href="#">Contact</a></li>
             <li><a href="#">About</a></li>
             <div class="search-btn">
-                <img id="searchbutton" class="search-icon" src="C:\Users\User\Downloads\search.png" alt="search-bar">
+                <img id="searchbutton" class="search-icon" src="C:\Users\User\.vscode\project\search.png" alt="search-bar">
            
                 <div class="searchbar">
                     <div class="search_submit">
                         <input type="search" class="searchhere">
-                    <button type="submit" class="submit"><img class="submitimg" src="C:\Users\User\Downloads\search.png" alt="search"></button>
+                    <button type="submit" class="submit"><img class="submitimg" src="C:\Users\User\.vscode\project\search.png" alt="search"></button>
                     </div>
                 </div>
             </div>
@@ -42,7 +42,7 @@
             <button class="contactme" id="contactMe">Contact Me</button>
         </div>
         <div class="image">
-            <img class="hero" src="C:\Users\User\Downloads\lpb-removebg-preview.png">
+            <img class="hero" src="C:\Users\User\.vscode\project\lpb-removebg-preview.png">
         </div>
       </div>   
     </div>
