--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
                 <li><a href="#">Contact</a></li>
                 <li><a href="#">About</a></li>
                 <div class="search-btn">
-                    <img id="searchbutton" class="search-icon" src="C:\Users\User\Documents\GitHub\portfolio\search.png" alt="search-bar">
+                    <img id="searchbutton" class="search-icon" src="search icon.png" alt="search-bar">
                
                     <div class="searchbar">
                         <div class="search_submit">
                             <input type="search" class="searchhere">
-                        <button type="submit" class="submit"><img class="submitimg" src="C:\Users\User\Documents\GitHub\portfolio\search.png" alt="search"></button>
+                        <button type="submit" class="submit"><img class="submitimg" src="search icon.png" alt="search"></button>
                         </div>
                     </div>
                 </div>
@@ -43,7 +43,7 @@
                 <button class="contactme" id="contactMe">Contact Me</button>
             </div>
             <div class="image">
-                <img class="hero" src="C:\Users\User\Documents\GitHub\portfolio\lpb-removebg-preview.png">
+                <img class="hero" src="lpb photo.png">
             </div>
           </div>   
         </div>
