--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>welcome</title>
-        <link rel="icon" type="image/x-icon" href="C:\Users\User\Downloads\plen logo white_prev_ui.png">
+        <link rel="icon" type="image/x-icon" href=" ">
         <meta name="author" content="Lenyie Promise">
         <meta charset="utf-8">
         <meta name="view-port" content="width=device-width, initial-scale=1.0">
